--- a/app/src/main/res/layout/fragment_ai_logic.xml
+++ b/app/src/main/res/layout/fragment_ai_logic.xml
@@ -22,6 +22,13 @@
         android:layout_height="wrap_content"
         android:text="Gerar resposta" />
 
+    <Button
+        android:id="@+id/btn_select_image"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:text="Selecionar Imagem"
+        android:layout_marginTop="8dp" />
+
     <TextView
         android:id="@+id/result_text"
         android:layout_width="match_parent"
